# vlogger

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  config_schema.json  pyproject.toml
vlogger/: __init__.py  cli.py
vlogger/commands/: gen_config.py  gen_schema.py  main_command.py
vlogger/core/: editor.py
vlogger/models/: config_model.py  schema_utils.py
